# magnetic-time

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  preset.json
agent_docs/: architecture.md  design-rendering.md  design-simulation.md  gotchas.md  plan.md  research-chain-banding.md
docs/: banding.html  index.html
docs/app/: index.html  magnetic-clock.js  variants.html
docs/app/pkg/: magnetic-time.js  magnetic-time_bg.wasm
scripts/: band_order.py  bench.sh  build-web.sh  front_track.py  ghost_decay.py  model1d.py
src/: app.rs  clock.rs  field.rs  hands.rs  main.rs  preset.rs  render.rs  sim.rs  vec2.rs  web.rs
